[gd_scene load_steps=11 format=2]

[ext_resource path="res://1939_nimatron/components/lamp/lamp.tscn" type="PackedScene" id=1]
[ext_resource path="res://1939_nimatron/ab_color_settings.gd" type="Script" id=2]
[ext_resource path="res://1939_nimatron/components/khat/khat.gd" type="Script" id=3]
[ext_resource path="res://1939_nimatron/components/lamp/atlases/noor.tres" type="Texture" id=4]
[ext_resource path="res://1939_nimatron/components/modir_bazi/modir_bazi.gd" type="Script" id=5]
[ext_resource path="res://1939_nimatron/components/sabt/sabt.tscn" type="PackedScene" id=6]
[ext_resource path="res://1939_nimatron/components/paszamine/paszamine.tscn" type="PackedScene" id=7]
[ext_resource path="res://1939_nimatron/components/thinking_lights/thinking_lights.tscn" type="PackedScene" id=8]
[ext_resource path="res://1939_nimatron/components/light_offer/light_offer.tscn" type="PackedScene" id=9]
[ext_resource path="res://test/new scene.tscn" type="PackedScene" id=10]


[node name="Main" type="Node2D"]

[node name="AbColorSettings" type="Node" parent="."]
script = ExtResource( 2 )
palette = [ Color( 0, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 0, 1 ), Color( 0, 1, 0, 1 ), Color( 0, 0.576471, 1, 1 ), Color( 0.945098, 1, 0, 1 ), Color( 1, 0.490196, 0, 1 ), Color( 0, 1, 0.180392, 1 ), Color( 1, 1, 0, 1 ) ]

[node name="Panel" parent="." instance=ExtResource( 7 )]

[node name="ModirBazi" type="Node2D" parent="."]
position = Vector2( 64, 96 )
scale = Vector2( -1, 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Khat1" type="Node2D" parent="ModirBazi"]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Lamp" parent="ModirBazi/Khat1" instance=ExtResource( 1 )]

[node name="Khat2" type="Node2D" parent="ModirBazi"]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Lamp" parent="ModirBazi/Khat2" instance=ExtResource( 1 )]
position = Vector2( 0, -16 )
color_in_pallete = 2

[node name="Lamp2" parent="ModirBazi/Khat2" instance=ExtResource( 1 )]
position = Vector2( 16, -8 )
color_in_pallete = 2

[node name="Lamp3" parent="ModirBazi/Khat2" instance=ExtResource( 1 )]
position = Vector2( 16, 8 )
color_in_pallete = 2

[node name="Lamp4" parent="ModirBazi/Khat2" instance=ExtResource( 1 )]
position = Vector2( 0, 16 )
color_in_pallete = 2

[node name="Lamp5" parent="ModirBazi/Khat2" instance=ExtResource( 1 )]
position = Vector2( -16, 8 )
color_in_pallete = 2

[node name="Lamp6" parent="ModirBazi/Khat2" instance=ExtResource( 1 )]
position = Vector2( -16, -8 )
color_in_pallete = 2

[node name="Khat3" type="Node2D" parent="ModirBazi"]
scale = Vector2( -1, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Lamp" parent="ModirBazi/Khat3" instance=ExtResource( 1 )]
position = Vector2( 0, -32 )
color_in_pallete = 3

[node name="Lamp2" parent="ModirBazi/Khat3" instance=ExtResource( 1 )]
position = Vector2( 16, -24 )
color_in_pallete = 3

[node name="Lamp3" parent="ModirBazi/Khat3" instance=ExtResource( 1 )]
position = Vector2( 32, -16 )
color_in_pallete = 3

[node name="Lamp4" parent="ModirBazi/Khat3" instance=ExtResource( 1 )]
position = Vector2( 32, 0 )
color_in_pallete = 3

[node name="Lamp5" parent="ModirBazi/Khat3" instance=ExtResource( 1 )]
position = Vector2( 32, 16 )
color_in_pallete = 3

[node name="Lamp6" parent="ModirBazi/Khat3" instance=ExtResource( 1 )]
position = Vector2( 16, 24 )
color_in_pallete = 3

[node name="Lamp7" parent="ModirBazi/Khat3" instance=ExtResource( 1 )]
position = Vector2( 0, 32 )
color_in_pallete = 3

[node name="Lamp8" parent="ModirBazi/Khat3" instance=ExtResource( 1 )]
position = Vector2( -16, 24 )
color_in_pallete = 3

[node name="Lamp9" parent="ModirBazi/Khat3" instance=ExtResource( 1 )]
position = Vector2( -32, 16 )
color_in_pallete = 3

[node name="Lamp10" parent="ModirBazi/Khat3" instance=ExtResource( 1 )]
position = Vector2( -32, 0 )
color_in_pallete = 3

[node name="Lamp11" parent="ModirBazi/Khat3" instance=ExtResource( 1 )]
position = Vector2( -32, -16 )
color_in_pallete = 3

[node name="Lamp12" parent="ModirBazi/Khat3" instance=ExtResource( 1 )]
position = Vector2( -16, -24 )
color_in_pallete = 3

[node name="Khat4" type="Node2D" parent="ModirBazi"]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Lamp" parent="ModirBazi/Khat4" instance=ExtResource( 1 )]
position = Vector2( 0, -48 )
color_in_pallete = 4

[node name="Lamp2" parent="ModirBazi/Khat4" instance=ExtResource( 1 )]
position = Vector2( 16, -40 )
color_in_pallete = 4

[node name="Lamp3" parent="ModirBazi/Khat4" instance=ExtResource( 1 )]
position = Vector2( 32, -32 )
color_in_pallete = 4

[node name="Lamp4" parent="ModirBazi/Khat4" instance=ExtResource( 1 )]
position = Vector2( 48, -24 )
color_in_pallete = 4

[node name="Lamp5" parent="ModirBazi/Khat4" instance=ExtResource( 1 )]
position = Vector2( 48, -8 )
color_in_pallete = 4

[node name="Lamp6" parent="ModirBazi/Khat4" instance=ExtResource( 1 )]
position = Vector2( 48, 8 )
color_in_pallete = 4

[node name="Lamp7" parent="ModirBazi/Khat4" instance=ExtResource( 1 )]
position = Vector2( 48, 24 )
color_in_pallete = 4

[node name="Lamp8" parent="ModirBazi/Khat4" instance=ExtResource( 1 )]
position = Vector2( 32, 32 )
color_in_pallete = 4

[node name="Lamp9" parent="ModirBazi/Khat4" instance=ExtResource( 1 )]
position = Vector2( 16, 40 )
color_in_pallete = 4

[node name="Lamp10" parent="ModirBazi/Khat4" instance=ExtResource( 1 )]
position = Vector2( 0, 48 )
color_in_pallete = 4

[node name="Lamp11" parent="ModirBazi/Khat4" instance=ExtResource( 1 )]
position = Vector2( -16, 40 )
color_in_pallete = 4

[node name="Lamp12" parent="ModirBazi/Khat4" instance=ExtResource( 1 )]
position = Vector2( -32, 32 )
color_in_pallete = 4

[node name="Lamp13" parent="ModirBazi/Khat4" instance=ExtResource( 1 )]
position = Vector2( -48, 24 )
color_in_pallete = 4

[node name="Lamp14" parent="ModirBazi/Khat4" instance=ExtResource( 1 )]
position = Vector2( -48, 8 )
color_in_pallete = 4

[node name="Lamp15" parent="ModirBazi/Khat4" instance=ExtResource( 1 )]
position = Vector2( -48, -8 )
color_in_pallete = 4

[node name="Lamp16" parent="ModirBazi/Khat4" instance=ExtResource( 1 )]
position = Vector2( -48, -24 )
color_in_pallete = 4

[node name="Lamp17" parent="ModirBazi/Khat4" instance=ExtResource( 1 )]
position = Vector2( -32, -32 )
color_in_pallete = 4

[node name="Lamp18" parent="ModirBazi/Khat4" instance=ExtResource( 1 )]
position = Vector2( -16, -40 )
color_in_pallete = 4

[node name="Khat1Button" type="Node2D" parent="ModirBazi"]
modulate = Color( 1, 1, 1, 0 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="ModirBazi/Khat1Button"]
position = Vector2( -8, -8 )
normal = ExtResource( 4 )

[node name="Khat2Buttons" type="Node2D" parent="ModirBazi"]
modulate = Color( 1, 1, 1, 0 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="ModirBazi/Khat2Buttons"]
position = Vector2( -8, -24 )
normal = ExtResource( 4 )

[node name="TouchScreenButton2" type="TouchScreenButton" parent="ModirBazi/Khat2Buttons"]
position = Vector2( 8, -16 )
normal = ExtResource( 4 )

[node name="TouchScreenButton3" type="TouchScreenButton" parent="ModirBazi/Khat2Buttons"]
position = Vector2( 8, 0 )
normal = ExtResource( 4 )

[node name="TouchScreenButton4" type="TouchScreenButton" parent="ModirBazi/Khat2Buttons"]
position = Vector2( -8, 8 )
normal = ExtResource( 4 )

[node name="TouchScreenButton5" type="TouchScreenButton" parent="ModirBazi/Khat2Buttons"]
position = Vector2( -24, 0 )
normal = ExtResource( 4 )

[node name="TouchScreenButton6" type="TouchScreenButton" parent="ModirBazi/Khat2Buttons"]
position = Vector2( -24, -16 )
normal = ExtResource( 4 )

[node name="Khat3Buttons" type="Node2D" parent="ModirBazi"]
modulate = Color( 1, 1, 1, 0 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="ModirBazi/Khat3Buttons"]
position = Vector2( -8, -40 )
normal = ExtResource( 4 )

[node name="TouchScreenButton2" type="TouchScreenButton" parent="ModirBazi/Khat3Buttons"]
position = Vector2( 8, -32 )
normal = ExtResource( 4 )

[node name="TouchScreenButton3" type="TouchScreenButton" parent="ModirBazi/Khat3Buttons"]
position = Vector2( 24, -24 )
normal = ExtResource( 4 )

[node name="TouchScreenButton4" type="TouchScreenButton" parent="ModirBazi/Khat3Buttons"]
position = Vector2( 24, -8 )
normal = ExtResource( 4 )

[node name="TouchScreenButton5" type="TouchScreenButton" parent="ModirBazi/Khat3Buttons"]
position = Vector2( 24, 8 )
normal = ExtResource( 4 )

[node name="TouchScreenButton6" type="TouchScreenButton" parent="ModirBazi/Khat3Buttons"]
position = Vector2( 8, 16 )
normal = ExtResource( 4 )

[node name="TouchScreenButton7" type="TouchScreenButton" parent="ModirBazi/Khat3Buttons"]
position = Vector2( -8, 24 )
normal = ExtResource( 4 )

[node name="TouchScreenButton8" type="TouchScreenButton" parent="ModirBazi/Khat3Buttons"]
position = Vector2( -24, 16 )
normal = ExtResource( 4 )

[node name="TouchScreenButton9" type="TouchScreenButton" parent="ModirBazi/Khat3Buttons"]
position = Vector2( -40, 8 )
normal = ExtResource( 4 )

[node name="TouchScreenButton10" type="TouchScreenButton" parent="ModirBazi/Khat3Buttons"]
position = Vector2( -40, -8 )
normal = ExtResource( 4 )

[node name="TouchScreenButton11" type="TouchScreenButton" parent="ModirBazi/Khat3Buttons"]
position = Vector2( -40, -24 )
normal = ExtResource( 4 )

[node name="TouchScreenButton12" type="TouchScreenButton" parent="ModirBazi/Khat3Buttons"]
position = Vector2( -24, -32 )
normal = ExtResource( 4 )

[node name="Khat4Buttons" type="Node2D" parent="ModirBazi"]
modulate = Color( 1, 1, 1, 0 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="ModirBazi/Khat4Buttons"]
position = Vector2( -8, -56 )
normal = ExtResource( 4 )

[node name="TouchScreenButton2" type="TouchScreenButton" parent="ModirBazi/Khat4Buttons"]
position = Vector2( 8, -48 )
normal = ExtResource( 4 )

[node name="TouchScreenButton3" type="TouchScreenButton" parent="ModirBazi/Khat4Buttons"]
position = Vector2( 24, -40 )
normal = ExtResource( 4 )

[node name="TouchScreenButton4" type="TouchScreenButton" parent="ModirBazi/Khat4Buttons"]
position = Vector2( 40, -32 )
normal = ExtResource( 4 )

[node name="TouchScreenButton5" type="TouchScreenButton" parent="ModirBazi/Khat4Buttons"]
position = Vector2( 40, -16 )
normal = ExtResource( 4 )

[node name="TouchScreenButton6" type="TouchScreenButton" parent="ModirBazi/Khat4Buttons"]
position = Vector2( 40, 0 )
normal = ExtResource( 4 )

[node name="TouchScreenButton7" type="TouchScreenButton" parent="ModirBazi/Khat4Buttons"]
position = Vector2( 40, 16 )
normal = ExtResource( 4 )

[node name="TouchScreenButton8" type="TouchScreenButton" parent="ModirBazi/Khat4Buttons"]
position = Vector2( 24, 24 )
normal = ExtResource( 4 )

[node name="TouchScreenButton9" type="TouchScreenButton" parent="ModirBazi/Khat4Buttons"]
position = Vector2( 8, 32 )
normal = ExtResource( 4 )

[node name="TouchScreenButton10" type="TouchScreenButton" parent="ModirBazi/Khat4Buttons"]
position = Vector2( -8, 40 )
normal = ExtResource( 4 )

[node name="TouchScreenButton11" type="TouchScreenButton" parent="ModirBazi/Khat4Buttons"]
position = Vector2( -24, 32 )
normal = ExtResource( 4 )

[node name="TouchScreenButton12" type="TouchScreenButton" parent="ModirBazi/Khat4Buttons"]
position = Vector2( -40, 24 )
normal = ExtResource( 4 )

[node name="TouchScreenButton13" type="TouchScreenButton" parent="ModirBazi/Khat4Buttons"]
position = Vector2( -56, 16 )
normal = ExtResource( 4 )

[node name="TouchScreenButton14" type="TouchScreenButton" parent="ModirBazi/Khat4Buttons"]
position = Vector2( -56, 0 )
normal = ExtResource( 4 )

[node name="TouchScreenButton15" type="TouchScreenButton" parent="ModirBazi/Khat4Buttons"]
position = Vector2( -56, -16 )
normal = ExtResource( 4 )

[node name="TouchScreenButton16" type="TouchScreenButton" parent="ModirBazi/Khat4Buttons"]
position = Vector2( -56, -32 )
normal = ExtResource( 4 )

[node name="TouchScreenButton17" type="TouchScreenButton" parent="ModirBazi/Khat4Buttons"]
position = Vector2( -40, -40 )
normal = ExtResource( 4 )

[node name="TouchScreenButton18" type="TouchScreenButton" parent="ModirBazi/Khat4Buttons"]
position = Vector2( -24, -48 )
normal = ExtResource( 4 )

[node name="Sabt" parent="." instance=ExtResource( 6 )]
position = Vector2( 80, 160 )
scale = Vector2( 1.5, 1.5 )

[node name="ThinkingLights" parent="." instance=ExtResource( 8 )]
position = Vector2( 56, 160 )

[node name="LightOffer" parent="." instance=ExtResource( 9 )]

[node name="Control" parent="." instance=ExtResource( 10 )]
margin_left = 16.0
margin_top = 8.0
margin_right = 112.0
margin_bottom = 40.0
[connection signal="pressed" from="ModirBazi/Khat1Button/TouchScreenButton" to="ModirBazi/Khat1" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat2Buttons/TouchScreenButton" to="ModirBazi/Khat2" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat2Buttons/TouchScreenButton2" to="ModirBazi/Khat2" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat2Buttons/TouchScreenButton3" to="ModirBazi/Khat2" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat2Buttons/TouchScreenButton4" to="ModirBazi/Khat2" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat2Buttons/TouchScreenButton5" to="ModirBazi/Khat2" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat2Buttons/TouchScreenButton6" to="ModirBazi/Khat2" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat3Buttons/TouchScreenButton" to="ModirBazi/Khat3" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat3Buttons/TouchScreenButton2" to="ModirBazi/Khat3" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat3Buttons/TouchScreenButton3" to="ModirBazi/Khat3" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat3Buttons/TouchScreenButton4" to="ModirBazi/Khat3" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat3Buttons/TouchScreenButton5" to="ModirBazi/Khat3" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat3Buttons/TouchScreenButton6" to="ModirBazi/Khat3" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat3Buttons/TouchScreenButton7" to="ModirBazi/Khat3" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat3Buttons/TouchScreenButton8" to="ModirBazi/Khat3" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat3Buttons/TouchScreenButton9" to="ModirBazi/Khat3" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat3Buttons/TouchScreenButton10" to="ModirBazi/Khat3" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat3Buttons/TouchScreenButton11" to="ModirBazi/Khat3" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat3Buttons/TouchScreenButton12" to="ModirBazi/Khat3" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat4Buttons/TouchScreenButton" to="ModirBazi/Khat4" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat4Buttons/TouchScreenButton2" to="ModirBazi/Khat4" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat4Buttons/TouchScreenButton3" to="ModirBazi/Khat4" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat4Buttons/TouchScreenButton4" to="ModirBazi/Khat4" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat4Buttons/TouchScreenButton5" to="ModirBazi/Khat4" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat4Buttons/TouchScreenButton6" to="ModirBazi/Khat4" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat4Buttons/TouchScreenButton7" to="ModirBazi/Khat4" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat4Buttons/TouchScreenButton8" to="ModirBazi/Khat4" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat4Buttons/TouchScreenButton9" to="ModirBazi/Khat4" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat4Buttons/TouchScreenButton10" to="ModirBazi/Khat4" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat4Buttons/TouchScreenButton11" to="ModirBazi/Khat4" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat4Buttons/TouchScreenButton12" to="ModirBazi/Khat4" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat4Buttons/TouchScreenButton13" to="ModirBazi/Khat4" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat4Buttons/TouchScreenButton14" to="ModirBazi/Khat4" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat4Buttons/TouchScreenButton15" to="ModirBazi/Khat4" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat4Buttons/TouchScreenButton16" to="ModirBazi/Khat4" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat4Buttons/TouchScreenButton17" to="ModirBazi/Khat4" method="turn_a_light_off"]
[connection signal="pressed" from="ModirBazi/Khat4Buttons/TouchScreenButton18" to="ModirBazi/Khat4" method="turn_a_light_off"]
[connection signal="released" from="Sabt" to="ModirBazi" method="go_next_turn"]
